; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/cli/extr_cli-interp.c_cli_interpreter_resume.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/cli/extr_cli-interp.c_cli_interpreter_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ui_file = type { i32 }

@cli_uiout = common dso_local global i32 0, align 4
@gdb_stdout = common dso_local global %struct.ui_file* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @cli_interpreter_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cli_interpreter_resume(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ui_file*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @cli_uiout, align 4
  %5 = load %struct.ui_file*, %struct.ui_file** @gdb_stdout, align 8
  %6 = call %struct.ui_file* @cli_out_set_stream(i32 %4, %struct.ui_file* %5)
  store %struct.ui_file* %6, %struct.ui_file** %3, align 8
  %7 = load %struct.ui_file*, %struct.ui_file** %3, align 8
  %8 = load %struct.ui_file*, %struct.ui_file** @gdb_stdout, align 8
  %9 = icmp ne %struct.ui_file* %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i32, i32* @cli_uiout, align 4
  %12 = load %struct.ui_file*, %struct.ui_file** %3, align 8
  %13 = call %struct.ui_file* @cli_out_set_stream(i32 %11, %struct.ui_file* %12)
  store %struct.ui_file* null, %struct.ui_file** %3, align 8
  br label %14

14:                                               ; preds = %10, %1
  %15 = call i32 (...) @gdb_setup_readline()
  %16 = load %struct.ui_file*, %struct.ui_file** %3, align 8
  %17 = icmp ne %struct.ui_file* %16, null
  br i1 %17, label %18, label %22

18:                                               ; preds = %14
  %19 = load i32, i32* @cli_uiout, align 4
  %20 = load %struct.ui_file*, %struct.ui_file** @gdb_stdout, align 8
  %21 = call %struct.ui_file* @cli_out_set_stream(i32 %19, %struct.ui_file* %20)
  br label %22

22:                                               ; preds = %18, %14
  ret i32 1
}

declare dso_local %struct.ui_file* @cli_out_set_stream(i32, %struct.ui_file*) #1

declare dso_local i32 @gdb_setup_readline(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
